NetBSD Problem Report #50517
From www@NetBSD.org Thu Dec 10 22:16:24 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id 3D2F5A6660
for <gnats-bugs@gnats.NetBSD.org>; Thu, 10 Dec 2015 22:16:24 +0000 (UTC)
Message-Id: <20151210221623.6A190A667B@mollari.NetBSD.org>
Date: Thu, 10 Dec 2015 22:16:23 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/compat/sunos32/sunos32_ioctl.c:849: bad switch ?
X-Send-Pr-Version: www-1.0
>Number: 50517
>Category: port-sun3
>Synopsis: src/sys/compat/sunos32/sunos32_ioctl.c:849: bad switch ?
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: port-sun3-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Thu Dec 10 22:20:00 +0000 2015
>Closed-Date: Mon Feb 15 11:40:04 +0000 2016
>Last-Modified: Mon Feb 15 11:40:04 +0000 2016
>Originator: David Binderman
>Release: cvs dated 20151210
>Organization:
>Environment:
>Description:
[src/sys/compat/sunos32/sunos32_ioctl.c:849] -> [src/sys/compat/sunos32/sunos32_ioctl.c:850]: (warning) Variable 'tmp' is reassigned a value before the old one has been used. 'break;' missing?
Source code is
switch ((intptr_t)SCARG_P32(uap, data)) {
case SUNOS_S_FLUSHR: tmp = FREAD;
case SUNOS_S_FLUSHW: tmp = FWRITE;
case SUNOS_S_FLUSHRW: tmp = FREAD|FWRITE;
}
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
From: "Michael van Elst" <mlelstv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50517 CVS commit: src/sys/compat/sunos32
Date: Fri, 11 Dec 2015 08:10:43 +0000
Module Name: src
Committed By: mlelstv
Date: Fri Dec 11 08:10:43 UTC 2015
Modified Files:
src/sys/compat/sunos32: sunos32_ioctl.c
Log Message:
PR 50517 bad switch
To generate a diff of this commit:
cvs rdiff -u -r1.33 -r1.34 src/sys/compat/sunos32/sunos32_ioctl.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 15 Feb 2016 11:40:04 +0000
State-Changed-Why:
committed by mlelsgv
(er, mlelstv)
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.