PR 50517 bad switch